# predictivemaintenancethesis

./: README.md
experiments/: .env  .gitignore  README.md  pyproject.toml  requirements.txt
experiments/notebooks/: .gitignore  experiment_failure_prediction.ipynb  experiment_failure_prediction.md  experiment_fault_detection_aps_scania_trucks.ipynb  experiment_fault_detection_aps_scania_trucks.md  experiment_rul_prediction.ipynb  experiment_rul_prediction.md
experiments/pmlib/: __init__.py  data_transformation.py  feature_extraction.py  modeling.py  preprocessing.py  utils.py
experiments/pmlib/evaluation/: classical.py  event_based.py  range_based.py  reduced.py  rul.py  utils.py
presentation/: DP_Jan_Lukany_2020_prezentace.pptx
text/: .gitignore  DP_Lukany_Jan_2020.tex  FITthesis.cls  Makefile  README.adoc  iso690.bst
text/chapters/: approaches.tex  conclusion.tex  experiments.tex  introduction.tex  ml.tex  pdm.tex
text/chapters/approaches/: failure_prediction.tex  fault_detection.tex  remaining_useful_life_prediction.tex
text/chapters/experiments/: failure_prediction_azure.tex  fault_detection_aps_scania.tex  implementation.tex  remaining_useful_life_prediction_turbofan.tex
text/misc/: TODO_glossaries.tex  abstractCS.tex  abstractEN.tex  acknowledgements.tex  acronyms.tex  contents_of_cd.tex  extra_setup.tex  keywordsCS.tex  keywordsEN.tex  ref.bib
